horizontal scroll issue - fixed

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
 
 html, body {
   background-color: #2d2d2d!important;
+  overflow-x: hidden;
 }
 
 html{
